Fix Home/Manage Applicants tables to include tags and proper row spacing

--- a/src/components/Admin/ManageApplicants/Table/TableBody/TableRow/TableRow.css
+++ b/src/components/Admin/ManageApplicants/Table/TableBody/TableRow/TableRow.css
@@ -54,6 +54,11 @@
 
 .manage-applicant-name {
     margin-left: 12px;
+    
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    row-gap: 12px;
 }
 
 .manage-row-item {
