--- a/src/components/Home/Table/TableBody/TableBody.css
+++ b/src/components/Home/Table/TableBody/TableBody.css
@@ -1,9 +1,7 @@
-#table-body-grid-container {
-    /* Grid item properties*/
+/* #table-body-grid-container {
     grid-row: 2 / span 1;
     grid-column: 1 / span 1;
 
-/* Grid container proprties */
     display: grid;
     grid-auto-rows: 81px;
     grid-template-columns: 100%;
@@ -16,4 +14,4 @@
 
     justify-items: center;
     align-items: center;
-}
+} */
