--- a/src/components/Home/Table/TableBody/TableRow/TableRow.css
+++ b/src/components/Home/Table/TableBody/TableRow/TableRow.css
@@ -27,6 +27,7 @@
 
     display: flex;
     flex-wrap: wrap;
+    row-gap: 12px;
 }
 
 .applicant-image {
